实现并记录了 dump 数据的方法

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: mvertes/alpine-mongo
     volumes:
       - "./data:/data/db"
+      - "./dump:/data/dump"
     restart: always
     command: [ "mongod", "--bind_ip", "0.0.0.0", "--auth" ]
     ports:
